--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
                 <!-- Logo/Site Title -->
                 <div class="flex-shrink-0">
                     <h1 class="text-xl font-bold text-white">
-                        <a href="/for_reinhardt/" class="text-white visited:text-white hover:text-gray-300">Jazz Guitarist Paper</a>
+                        <a href="/" class="text-white visited:text-white hover:text-gray-300">Jazz Guitarist Paper</a>
                     </h1>
                 </div>
 
